<resources>
    <string name="app_name">VoiceTransport</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_TextView">Départ</string>
    <string name="end_TextView">Arrivée</string>
    <string name="time_TextView">Temps</string>
    <string name="travel_TextView">Trajets</string>
    <string name="google_maps_key">AIzaSyBuAnhRy95K8XSSehEciHxGTbrlrAtQLj8</string>

    <!-- Navigation drawer -->
    <string name="nav_advancedResearch">Recherche avancée</string>
    <string name="nav_history">Historique des recherches</string>
    <string name="title_activity_maps">Map</string>
    <string name="searchButton">Rechercher</string>
    <string name="advancedResearchTitle">Recherche avancée</string>
    <string name="hour_TextView">Heures</string>
</resources>
